--- a/day7/Makefile
+++ b/day7/Makefile
@@ -3,10 +3,10 @@ test: ./day7
 	./day7
 
 ./day7: day7.c
-	gcc -lGenericStructures day7.c -o day7
+	gcc -lGenericStructures day7.c day7aux.c -o day7
 
 debug: day7.c
-	gcc -g -lGenericStructures day7.c -o day7
+	gcc -g -lGenericStructures day7.c day7aux.c -o day7
 
 leakCheck: ./day7
 	valgrind ./day7
